--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,20 @@
-BOT_TOKEN: 
-  - ODE3MzkzOTQ4xxxxxxxxxxxxxxxxxxxx
-  - ODk1NTEyMDExxxxxxxxxxxxxxxxxxxxx
-CHANNEL_ID: 
-  - 10300xxxxxxxxxxxxxx
-  - 87751xxxxxxxxxxxxxx
-MODE: simsimi
+BOT_TOKEN:
+  - OTUyMjE2MTE4NTg2NjYyOTgy.GqCjzh.DzkZFyr15YManaxA2lI0WAbVfH1gVLYwckwm5c
+  #- ODk1NTEyMDExxxxxxxxxxxxxxxxxxxxx
+CHANNEL_ID:
+  - 1063112086240104598
+  - 1063112119471579146
+  - 1063112142552825866
+  - 1063112169723547738
+  - 1063112209162571866
+  - 1063112238073917440
+  - 1063112271670284359
+  - 1063112298480291921
+
+
+MODE: repost
 REPLY: Y
 SIMSIMI_LANG: en
-DELAY: 10
-DEL_AFTER: 
+DELAY: 0.5
+DEL_AFTER: y
 REPOST_LAST_CHAT: 100
