--- a/config.yaml
+++ b/config.yaml
@@ -1,20 +1,12 @@
 BOT_TOKEN:
-  - OTUyMjE2MTE4NTg2NjYyOTgy.GqCjzh.DzkZFyr15YManaxA2lI0WAbVfH1gVLYwckwm5c
+  - ODI0ODEyNjc5MDI1MjYyNjAz.GrzZg_.hWGzCpNDxoRZTBOiZG2AHtoqk-di3PpLrcEJGw
   #- ODk1NTEyMDExxxxxxxxxxxxxxxxxxxxx
 CHANNEL_ID:
-  - 1063112086240104598
-  - 1063112119471579146
-  - 1063112142552825866
-  - 1063112169723547738
-  - 1063112209162571866
-  - 1063112238073917440
-  - 1063112271670284359
-  - 1063112298480291921
-
+  - 1062114736029843486
 
 MODE: repost
 REPLY: Y
 SIMSIMI_LANG: en
-DELAY: 0.5
-DEL_AFTER: y
+DELAY: 10
+DEL_AFTER:
 REPOST_LAST_CHAT: 100
