--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 BOT_TOKEN:
-  - ODI0ODEyNjc5MDI1MjYyNjAz.GrzZg_.hWGzCpNDxoRZTBOiZG2AHtoqk-di3PpLrcEJGw
+  - ODI0ODEyNjc5MDI1MjYyNjAz.GCV8De.zlKtebmpwR_c6oBLZ9re4krCPjKlnSpQ7YpqI0
   #- ODk1NTEyMDExxxxxxxxxxxxxxxxxxxxx
 CHANNEL_ID:
   - 1062114736029843486
@@ -7,6 +7,6 @@ CHANNEL_ID:
 MODE: repost
 REPLY: Y
 SIMSIMI_LANG: en
-DELAY: 10
+DELAY: 30
 DEL_AFTER:
 REPOST_LAST_CHAT: 100
